k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
      - http:
         paths:
            - path: /*
              pathType: ImplementationSpecific
              backend:
                 service:
                     name: jenkins-svc
                     port:
                       number: 8080
